--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,12 +18,13 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
+        android:id="@+id/btn1"
         android:layout_height="wrap_content"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="25dp"
-        app:layout_constraintBottom_toBottomOf="@id/videoView"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/baseline_screen_rotation_alt_24"
-        app:layout_constraintEnd_toEndOf="@id/videoView">
+        app:layout_constraintEnd_toEndOf="parent">
 
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
